--- a/src/main/webapp/admin_api_index.xhtml
+++ b/src/main/webapp/admin_api_index.xhtml
@@ -10,15 +10,18 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <h:panelGrid columns="1" rendered="#{webUserController.hasPrivilege('AdminItems')}" style="width: 100%;" >
+                    <h:panelGrid columns="1" 
+                                 rendered="#{webUserController.hasPrivilege('AdminItems')}" 
+                                 style="width: 100%;" >
                         <f:facet name="header" >
                             <p:outputLabel value="Manage APIs" ></p:outputLabel>
                         </f:facet>
-                        <p:commandButton styleClass="linkButton" ajax="false" value="Get Dosage froms from Core Application" 
-                                         action="#{apiApplicationController.fillMedicineAndUnits()}" />
-                        <p:commandButton styleClass="linkButton" ajax="false" value="Get Institution List from Core Application" 
+                        <p:commandButton ajax="false" value="Load Medicines" 
+                                         action="#{apiApplicationController.fillMedicineData()}" />
+                        <p:commandButton ajax="false" value="Load Medicines Relationships" 
+                                         action="#{apiApplicationController.fillMedicineRelationships()}" />
+                        <p:commandButton  ajax="false" value="Load Departments" 
                                          action="#{apiApplicationController.fillDepartments}" />
-
                         <p:inputTextarea value="#{apiApplicationController.response}" style="width: 90%; height: 500px;" ></p:inputTextarea>
                     </h:panelGrid>
                 </h:form>
