--- a/src/main/webapp/pharmacy/list_prescriptions.xhtml
+++ b/src/main/webapp/pharmacy/list_prescriptions.xhtml
@@ -99,41 +99,9 @@
                                         <f:convertDateTime pattern="hh:mm a" ></f:convertDateTime>
                                     </h:outputLabel>
                                 </p:column>
-
-                                <p:column headerText="Bill No" 
-                                          sortBy="#{bill.insId}"
-                                          filterBy="#{bill.insId}"
-                                          filterMatchMode="contains">                                
-                                    <h:outputLabel   value="#{bill.insId}"/>
-                                </p:column>  
-
-                                <p:column headerText="Institution"  rendered="#{billController.institution eq null and billController.department eq null}"
-                                          sortBy="#{bill.institution.name}">                                
-                                    <h:outputLabel value="#{bill.institution.name}" />
-                                </p:column>
-                                <p:column headerText="Department"   rendered="#{billController.department eq null}"
-                                          sortBy="#{bill.department.name}">                                
-                                    <h:outputLabel value="#{bill.department.name}" />
-                                </p:column>
-                                <p:column headerText="Bill Type" 
-                                          sortBy="#{bill.billType}"
-                                          filterBy="#{bill.billType}"
-                                          filterMatchMode="contains"
-                                          >                                
-                                    <h:outputLabel   value="#{bill.billType}"/>
-                                </p:column> 
-                                <p:column headerText="Bill Type" 
-                                          sortBy="#{bill.deptId}"
-                                          filterBy="#{bill.deptId}"
-                                          filterMatchMode="contains"
-                                          >                                
-                                    <h:outputLabel   value="#{bill.deptId}"/>
-                                </p:column> 
-                                <p:column headerText="Customer"  
-                                          sortBy="#{bill.toDepartment.name}"
-                                          filterBy="#{bill.toDepartment.name}"
-                                          filterMatchMode="contains">                                
-                                    <h:outputLabel value="#{bill.toInstitution.name} - #{bill.toDepartment.name}" />
+                                <p:column headerText="Institution"  
+                                          sortBy="#{bill.fromDepartment.name}">                                
+                                    <h:outputLabel value="#{bill.fromDepartment.name}" />
                                 </p:column>
                                 <p:column headerText="Patient"
                                           sortBy="#{bill.patient.person.nameWithTitle}"
@@ -155,129 +123,8 @@
                                         </div>
                                     </p:tooltip>
                                 </p:column>
-
-                                <p:column headerText="Billed by" 
-                                          sortBy="#{bill.creater.webUserPerson.name}"
-                                          filterBy="#{bill.creater.webUserPerson.name}"
-                                          filterMatchMode="contains">
-                                    <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
-                                    </h:outputLabel>
-                                    <br/>
-                                    <h:panelGroup rendered="#{bill.cancelled}" >
-                                        <h:outputLabel style="color: red;" value="Cancelled By " />
-                                        <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" value="#{bill.cancelledBill.creater.webUserPerson.name}" >                                       
-                                        </h:outputLabel>
-                                    </h:panelGroup>
-                                    <h:panelGroup rendered="#{bill.refunded}" >
-                                        <h:outputLabel style="color: red;" value="Refunded By " />
-                                        <h:outputLabel style="color: red;" rendered="#{bill.refunded}" value="#{bill.refundedBill.creater.webUserPerson.name}" >
-                                        </h:outputLabel>
-                                    </h:panelGroup>
-                                </p:column>    
-
-                                <p:column headerText="Payment method" 
-                                          sortBy="#{bill.paymentMethod}"
-                                          filterBy="#{bill.paymentMethod}"
-                                          filterMatchMode="contains" 
-                                          style="width: 100px!important;">                                
-                                    <h:outputLabel value="#{bill.paymentMethod}" /><br/>
-                                </p:column>
-                                <p:column headerText="Discount Scheme" 
-                                          sortBy="#{bill.paymentScheme.name}"
-                                          filterBy="#{bill.paymentScheme.name}"
-                                          filterMatchMode="contains" 
-                                          style="width: 100px!important;">                                
-                                    <h:outputLabel value="#{bill.paymentScheme.name}" />
-                                </p:column>
-                                <p:column headerText="Gross Value"  
-                                          sortBy="#{bill.total}" styleClass="averageNumericColumn">
-                                    <h:outputLabel value="#{bill.total}" >
-                                        <f:convertNumber pattern="#,##0.00"/>
-                                    </h:outputLabel>
-                                </p:column>
-                                <p:column headerText="Discount" 
-                                          sortBy="#{bill.discount}" styleClass="averageNumericColumn">
-                                    <h:outputLabel value="#{bill.discount}" >
-                                        <f:convertNumber pattern="#,##0.00"/>
-                                    </h:outputLabel>
-
-                                </p:column>
-                                <p:column headerText="Net Value" 
-                                          sortBy="#{bill.netTotal}" styleClass="averageNumericColumn">
-                                    <h:outputLabel value="#{bill.netTotal}" >
-                                        <f:convertNumber pattern="#,##0.00"/>
-                                    </h:outputLabel>
-                                </p:column>  
-
-                                <p:column headerText="Cancellations/Refunds"  
-                                          sortBy="#{bill.createdAt}">
-                                    <h:panelGroup rendered="#{bill.cancelled}" >
-                                        <h:outputLabel style="color: red;" value="Cancelled at " />
-                                        <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" value="#{bill.cancelledBill.createdAt}" >
-                                            <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm:ss a"/>
-                                        </h:outputLabel>
-                                    </h:panelGroup>
-                                    <h:panelGroup rendered="#{bill.refunded}" >
-                                        <h:outputLabel style="color: red;" value="Refunded at " />
-                                        <h:outputLabel style="color: red;" rendered="#{bill.refunded}" value="#{bill.refundedBill.createdAt}" >
-                                            <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm:ss a"/>
-                                        </h:outputLabel>
-                                    </h:panelGroup>
-                                    <h:outputLabel rendered="#{bill.refundedBill ne null}" value="#{bill.refundedBill.comments}" >
-                                    </h:outputLabel>
-                                    <h:outputLabel  rendered="#{bill.cancelledBill ne null}" value="#{bill.cancelledBill.comments}" >
-                                    </h:outputLabel>
-                                </p:column>  
-
-                                <p:columnGroup type="footer" >
-                                    <p:row >
-                                        <p:column headerText="Date" rendered="#{!commonController.sameDate(billController.fromDate , billController.toDate)}">                                
-                                        </p:column>
-                                        <p:column headerText="Time">                                
-                                        </p:column>
-                                        <p:column headerText="Bill No" >                                
-                                        </p:column>  
-                                        <p:column headerText="Institution" rendered="#{billController.institution eq null and billController.department eq null}"> 
-                                        </p:column>
-                                        <p:column headerText="Department"   rendered="#{billController.department eq null}"
-                                                  sortBy="#{bill.department.name}">                                
-                                        </p:column>
-                                        <p:column headerText="Bill Type" >                                
-                                        </p:column> 
-                                        <p:column headerText="Bill Type" >                                
-                                        </p:column> 
-                                        <p:column headerText="Customer" >                                
-                                        </p:column>
-                                        <p:column headerText="Patient">                               
-                                        </p:column>
-
-                                        <p:column headerText="Billed by">
-                                        </p:column>    
-
-                                        <p:column headerText="Payment method" >                                
-                                        </p:column>
-                                        <p:column headerText="Discount Scheme">                                
-                                        </p:column>
-                                        <p:column headerText="Gross Value" footerText="#{billController.grosTotal}">
-                                        </p:column>
-                                        <p:column headerText="Discount" footerText="#{billController.discount}">
-                                        </p:column>
-                                        <p:column footerText="#{billController.netTotal}" >
-                                        </p:column>  
-
-                                        <p:column headerText="Cancellations/Refunds"  
-                                                  sortBy="#{bill.createdAt}">
-                                        </p:column>  
-                                    </p:row>
-
-                                </p:columnGroup>
-
-                                <f:facet name="footer">
-                                    <h:outputLabel style="float: right" value="Cachier : #{sessionController.loggedUser.webUserPerson.name} " />
-                                </f:facet>
                             </p:dataTable>
                         </h:panelGroup> 
-
                     </p:panel>
                 </h:form>
             </ui:define>
